--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site wide configuration
 
-title: Site Title
+title: Found The Sound
 locale: en_US
 description: Describe your website here.
 logo: site-logo.png
 search: true
-url: http://localhost:4000
+url: http://foundthesound.github.io/fts
 
 # Jekyll configuration
 
