--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.
 
 # Site owner
 owner:
-  name: Your Name
+  name: Ryan Woodhouse
   avatar: bio-photo.jpg
   email: you@email.com
   disqus-shortname:
