--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Describe your website here.
 logo: site-logo.png
 search: true
-url: https://foundthesound.github.io/fts
+url: http://foundthesound.github.io/fts
 
 # Jekyll configuration
 
