--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Found The Sound
 locale: en_US
-description: Describe your website here.
+description: WEEKLY ELECTRONIC MUSIC BLOG
 logo: site-logo.png
 search: true
 url: https://foundthesound.github.io/fts
