--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Found The Sound
 locale: en_US
 description: WEEKLY ELECTRONIC MUSIC BLOG
-logo: site-logo.png
+logo: FTS-logo.png
 search: true
 url: https://foundthesound.github.io/fts
 
