--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.
 # Site owner
 owner:
   name: Ryan Woodhouse
-  avatar: bio-photo.jpg
+  avatar: ryan-bio.jpg
   email: you@email.com
   disqus-shortname:
   twitter: #username
