--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ owner:
   avatar: ryan-bio.jpg
   email: you@email.com
   disqus-shortname:
-  twitter: #username
+  twitter: ryanwoodhouses
   facebook: #username
   github: #username
   stackexchange: #http://stackoverflow.com/users/123456/username
