--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Found The Sound
 locale: en_US
-description: WEEKLY ELECTRONIC MUSIC BLOG
+description: THE DAILY ELECTRONIC MUSIC BLOG
 logo: fts-logo2.png
 search: true
 url: https://foundthesound.github.io/fts
