--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,14 +1,14 @@
 # Authors
 
 billy_rick:
-  name: Billy Rick
-  web: http://thewhip.com
-  email: billy@rick.com
+  name: Tom French
+  web:
+  email:
   bio: "What do you want, jewels? I am a very extravagant man."
   avatar: bio-photo-2.jpg
-  twitter: extravagantman
+  twitter:
   google:
-    plus: BillyRick
+    plus:
 
 cornelius_fiddlebone:
   name: Cornelius Fiddlebone
