--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ billy_rick:
   web:
   email:
   bio: "What do you want, jewels? I am a very extravagant man."
-  avatar: bio-photo-2.jpg
+  avatar: frenchy-bio.jpg
   twitter:
   google:
     plus:
